--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "composite": true,
+    "noEmit": false,
     "jsx": "react-jsx",
 
     "baseUrl": ".",
