--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,7 +15,8 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    "composite": true,
+    "noEmit": false,
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
