fix to deploy 2

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -17,6 +17,7 @@
     "moduleDetection": "force",
     "composite": true,
     "noEmit": false,
+    "emitDeclarationOnly": true,
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
